creusot/tests/should_fail/ghost/non_terminating.stderr
warning: unreachable call
  --> non_terminating.rs:18:29
   |
18 |       let _g: GhostBox<i32> = ghost! {
   |  _____________________________^
19 | |         loop {}
   | |         ------- any code following this expression is unreachable
20 | |     };
   | |_____^ unreachable call
   |
   = note: `#[warn(unreachable_code)]` on by default
   = note: this warning originates in the macro `ghost` (in Nightly builds, run with -Z macro-backtrace for more info)

error: `ghost!` block must not contain loops.
  --> non_terminating.rs:18:29
   |
18 |       let _g: GhostBox<i32> = ghost! {
   |  _____________________________^
19 | |         loop {}
20 | |     };
   | |_____^
   |
note: looping occurs here
  --> non_terminating.rs:19:9
   |
19 |         loop {}
   |         ^^^^^^^
   = note: this error originates in the macro `ghost` (in Nightly builds, run with -Z macro-backtrace for more info)

error: Mutually recursive functions: when calling `recursive`...
  --> non_terminating.rs:5:1
   |
5  | pub fn recursive() {
   | ^^^^^^^^^^^^^^^^^^
   |
note: then `recursive` calls `f`...
  --> non_terminating.rs:7:9
   |
7  |         f();
   |         ^^^
note: finally `f` calls `recursive`.
  --> non_terminating.rs:14:5
   |
14 |     recursive();
   |     ^^^^^^^^^^^

error: aborting due to 2 previous errors; 1 warning emitted

